<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home_selector"
        android:title="@string/home"
        />

    <item
        android:id="@+id/navigation_attendance"
        android:icon="@drawable/icon_attendance_selector"
        android:title="@string/attendance"
        />

    <item
        android:id="@+id/navigation_project"
        android:icon="@drawable/icon_projek_selector"
        android:title="@string/project"
        />

    <item
        android:id="@+id/navigation_meet"
        android:icon="@drawable/icon_meet_selector"
        android:title="@string/meet"
        />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon_profile_selector"
        android:title="@string/profile"
        />
</menu>