<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.ui.activities.ShiftChangeDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp">
        <ImageView
            android:id="@+id/iv_back_sub_attendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_back"
            android:src="@drawable/arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:id="@+id/tv_back_sub_attendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shift_change"
            android:textSize="20sp"
            android:textColor="@color/gray800"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintStart_toEndOf="@id/iv_back_sub_attendance"
            app:layout_constraintTop_toTopOf="@id/iv_back_sub_attendance"
            app:layout_constraintBottom_toBottomOf="@id/iv_back_sub_attendance"
            android:layout_marginStart="20dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:strokeWidth="0dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="@color/red2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_back_sub_attendance"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp"
                android:paddingHorizontal="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">
                <ImageView
                    android:id="@+id/iv_status_submission"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/icon_times_circle"
                    android:layout_marginEnd="5dp"/>
                <TextView
                    android:id="@+id/tv_status_submission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decline"
                    android:textSize="12sp"
                    android:textColor="@color/red500"
                    android:fontFamily="@font/poppins_semibold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_submission"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Izin berpindah"
            android:textSize="20sp"
            android:textColor="@color/gray800"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintTop_toBottomOf="@id/cv_status"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_desc_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:textSize="14sp"
            android:maxLines="2"
            android:textColor="@color/gray500"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintTop_toBottomOf="@id/tv_title_sub"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tv_effective_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/effective_date"
            android:textSize="16sp"
            android:textColor="@color/gray500"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_sub"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:id="@+id/ll_date_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@drawable/bg_white_stroke"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_effective_date">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_black"/>
            <TextView
                android:id="@+id/tv_date_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nov_10_2024_nov_11_2024"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"
                android:textColor="@color/gray500"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_shift_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shift_now"
            android:textSize="16sp"
            android:textColor="@color/gray500"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintTop_toBottomOf="@id/ll_date_sub"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_shift_now_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shift_pagi_08_00_13_00"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp"
            android:textColor="@color/gray500"
            android:background="@drawable/bg_white_stroke"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_shift_now"
            app:layout_constraintStart_toStartOf="parent"

            />

        <TextView
            android:id="@+id/tv_shift_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shift_submission"
            android:textSize="16sp"
            android:textColor="@color/gray500"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintTop_toBottomOf="@id/tv_shift_now_input"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_shift_sub_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shift_siang_13_30_17_00"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp"
            android:textColor="@color/gray500"
            android:background="@drawable/bg_white_stroke"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_shift_sub"
            app:layout_constraintStart_toStartOf="parent"

            />

        <TextView
            android:id="@+id/tv_approved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/approved_by"
            android:textSize="16sp"
            android:textColor="@color/gray500"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintTop_toBottomOf="@id/tv_shift_sub_input"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tv_approved_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strip"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp"
            android:textColor="@color/gray500"
            android:background="@drawable/bg_white_stroke"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_approved"
            app:layout_constraintStart_toStartOf="parent"

            />

        <TextView
            android:id="@+id/tv_attechment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attechment"
            android:textSize="16sp"
            android:textColor="@color/gray500"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintTop_toBottomOf="@id/tv_approved_input"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"/>

        <FrameLayout
            android:id="@+id/fl_attechment"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:background="@drawable/bg_card_stroke_dot"
            app:layout_constraintTop_toBottomOf="@id/tv_attechment"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="5dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/permission"
                android:contentDescription="@string/image_attechment" />
        </FrameLayout>

        <com.example.task2_attendright.presentation.ui.customview.MyButton
            android:id="@+id/btn_cancel_submission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_submission"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_bold"
            android:textAllCaps="false"
            android:backgroundTint="@color/red500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/fl_attechment"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>