<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/pop_up_bg"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/userImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/user_profile_image"
            android:scaleType="centerCrop"
            android:background="@drawable/circle_background"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maulana_ahmad_reza_abadi"
                android:textColor="@color/gray3"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/userEmailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maulanareza_gmail_com"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/gray3"
                android:textSize="14sp"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="12dp"
        android:background="#E0E0E0" />

    <TextView
        android:id="@+id/reportUserTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_maulana_ahmad_reza_abadi"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/gray3"
        android:textSize="16sp"
        android:paddingVertical="8dp"/>

</LinearLayout>
